// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rc-swipeable-tabs Should render scrollable tabbar with correct DOM structure 1`] = `
<div
  class="rc-tabs rc-tabs-top rc-tabs-rtl"
>
  <div
    class="rc-tabs-bar"
    data-extra="tabbar"
    role="tablist"
    tabindex="0"
  >
    <button
      style="float:left"
    >
      Extra Content
    </button>
    <div
      class="rc-tabs-nav-container"
    >
      <span
        class="rc-tabs-tab-prev rc-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="rc-tabs-tab-prev-icon"
        />
      </span>
      <span
        class="rc-tabs-tab-next rc-tabs-tab-btn-disabled"
        unselectable="unselectable"
      >
        <span
          class="rc-tabs-tab-next-icon"
        />
      </span>
      <div
        class="rc-tabs-nav-wrap"
      >
        <div
          class="rc-tabs-nav-scroll"
        >
          <div
            class="rc-tabs-nav rc-tabs-nav-animated"
          >
            <div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="rc-tabs-tab-active rc-tabs-tab"
                role="tab"
              >
                tab-0
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-3
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-4
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-5
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-6
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-7
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-8
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-9
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class=" rc-tabs-tab"
                role="tab"
              >
                tab-10
              </div>
            </div>
            <div
              class="rc-tabs-ink-bar rc-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
  <div
    class="rc-tabs-content rc-tabs-content-animated"
    style="transform:translateX(0%) translateZ(0);-webkit-transform:translateX(0%) translateZ(0);-moz-transform:translateX(0%) translateZ(0)"
  >
    <div
      aria-hidden="false"
      class="rc-tabs-tabpane rc-tabs-tabpane-active"
      role="tabpanel"
    >
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
      <div
        style="display:flex;align-items:center;justify-content:center;height:5rem;background-color:#fff"
      >
        tab-0-content
      </div>
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
    </div>
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
</div>
`;

exports[`rc-swipeable-tabs Should render swipeable tabbar with correct DOM structure 1`] = `
<div
  class="rc-tabs rc-tabs-top rc-tabs-rtl"
>
  <div
    class="rc-tabs-bar"
    role="tablist"
    tabindex="0"
  >
    <div
      class="rc-tabs-nav-container rc-tabs-nav-swipe-container rc-tabs-nextpage"
    >
      <div
        class="rc-tabs-nav-wrap"
      >
        <div
          class="rc-tabs-nav-swipe"
        >
          <div
            class="rc-tabs-nav"
          >
            <div
              aria-disabled="false"
              aria-selected="true"
              class="rc-tabs-tab rc-tabs-tab-active"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-0
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-1
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-2
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-3
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-4
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-5
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-6
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-7
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-8
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-9
            </div>
            <div
              aria-disabled="false"
              aria-selected="false"
              class="rc-tabs-tab"
              role="tab"
              style="-webkit-flex-basis:20%;flex-basis:20%"
            >
              tab-10
            </div>
            <div
              class="rc-tabs-ink-bar rc-tabs-ink-bar-animated"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
  <div
    class="rc-tabs-content rc-tabs-content-animated"
    style="transform:translateX(0%) translateZ(0);-webkit-transform:translateX(0%) translateZ(0);-moz-transform:translateX(0%) translateZ(0)"
  >
    <div
      aria-hidden="false"
      class="rc-tabs-tabpane rc-tabs-tabpane-active"
      role="tabpanel"
    >
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
      <div
        style="display:flex;align-items:center;justify-content:center;height:5rem;background-color:#fff"
      >
        tab-0-content
      </div>
      <div
        role="presentation"
        style="width:0;height:0;overflow:hidden;position:absolute"
        tabindex="0"
      />
    </div>
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
    <div
      aria-hidden="true"
      class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
      role="tabpanel"
    />
  </div>
  <div
    role="presentation"
    style="width:0;height:0;overflow:hidden;position:absolute"
    tabindex="0"
  />
</div>
`;

exports[`rc-swipeable-tabs should render Slider with correct DOM structure 1`] = `
<div
  style="width:750px;height:1334px"
>
  <div
    class="rc-tabs rc-tabs-top rc-tabs-rtl"
  >
    <div
      class="rc-tabs-bar"
      role="tablist"
      tabindex="0"
    >
      <div
        class="rc-tabs-nav-container rc-tabs-nav-swipe-container rc-tabs-prevpage rc-tabs-nextpage"
      >
        <div
          class="rc-tabs-nav-wrap"
        >
          <div
            class="rc-tabs-nav-swipe"
          >
            <div
              class="rc-tabs-nav"
            >
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-0
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-1
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-2
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-3
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-4
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-5
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-6
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-7
              </div>
              <div
                aria-disabled="false"
                aria-selected="true"
                class="rc-tabs-tab rc-tabs-tab-active"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-8
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-9
              </div>
              <div
                aria-disabled="false"
                aria-selected="false"
                class="rc-tabs-tab"
                role="tab"
                style="-webkit-flex-basis:20%;flex-basis:20%"
              >
                tab-10
              </div>
              <div
                class="rc-tabs-ink-bar rc-tabs-ink-bar-animated"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
    <div
      class="rc-tabs-content rc-tabs-content-animated"
      style="transform:translateX(800%) translateZ(0);-webkit-transform:translateX(800%) translateZ(0);-moz-transform:translateX(800%) translateZ(0)"
    >
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="false"
        class="rc-tabs-tabpane rc-tabs-tabpane-active"
        role="tabpanel"
      >
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
        <div
          style="display:flex;align-items:center;justify-content:center;height:5rem;background-color:#fff"
        >
          tab-8-content
        </div>
        <div
          role="presentation"
          style="width:0;height:0;overflow:hidden;position:absolute"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
      <div
        aria-hidden="true"
        class="rc-tabs-tabpane rc-tabs-tabpane-inactive"
        role="tabpanel"
      />
    </div>
    <div
      role="presentation"
      style="width:0;height:0;overflow:hidden;position:absolute"
      tabindex="0"
    />
  </div>
</div>
`;
